Fix problem with sites list table being too large by diminishing font size and truncating long urls at 40 chars. Fixes #11

--- a/sites/all/themes/scratchpads_eu/css/sites_list.css.less
+++ b/sites/all/themes/scratchpads_eu/css/sites_list.css.less
@@ -27,7 +27,7 @@ body.context-explore {
 body.context-explore div.view-site-list.view-display-id-block_2 {
 
   table {
-    font-size: 9pt;
+    font-size: 8pt;
     td {
       padding: 4px 1px;
       border: 1px solid @separator_color;
